[gd_scene load_steps=9 format=3 uid="uid://cqkx3x0m5qe1k"]

[ext_resource type="Script" path="res://energy_shot.gd" id="1_rw77s"]
[ext_resource type="Texture2D" uid="uid://j45piybobkqg" path="res://Assets/energy_shot_0000.png" id="2_0k6j2"]
[ext_resource type="Texture2D" uid="uid://bja44k8j6tdhy" path="res://Assets/energy_shot_0001.png" id="3_svl6c"]
[ext_resource type="Texture2D" uid="uid://cdl4buqoy82y" path="res://Assets/energy_shot_start_0000.png" id="4_tfxfn"]
[ext_resource type="Texture2D" uid="uid://6sr7fxap7oi5" path="res://Assets/energy_shot_start_0001.png" id="5_nuyre"]
[ext_resource type="Texture2D" uid="uid://ci5obt2gyw5vw" path="res://Assets/energy_shot_start_0002.png" id="6_cjbj6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tu7nq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0k6j2")
}, {
"duration": 1.0,
"texture": ExtResource("3_svl6c")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_tfxfn")
}, {
"duration": 1.0,
"texture": ExtResource("5_nuyre")
}, {
"duration": 1.0,
"texture": ExtResource("6_cjbj6")
}],
"loop": false,
"name": &"start",
"speed": 16.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_avvdh"]
radius = 28.0

[node name="EnergyBall" type="Area2D"]
light_mask = 0
z_index = 1
collision_layer = 64
collision_mask = 38
script = ExtResource("1_rw77s")
particle_color = Color(0.580392, 1, 0.129412, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_tu7nq")
autoplay = "start"
frame_progress = 0.0515696

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_avvdh")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
